# orpheus

./: .actrc  .gitignore  .secrets.example  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PLAN.md  README.md  mise.toml  package.json  pyproject.toml  rust-toolchain.toml
.githooks/: pre-commit
.github/: dependabot.yml  pull_request_template.md
.github/actions/install-linux-deps/: action.yml
.github/actions/sign-artifacts/: action.yml
.github/workflows/: auto-merge-deps.yml  ci.yml  latest.yml  nightly.yml  publish-cask-head.yml  publish-cask.yml  publish-crates.yml  release.yml  test-sign-artifacts.yml
12/6ed254fb92/: metadata.json
12/6ed254fb92/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
17/b6bbc6c891/: metadata.json
17/b6bbc6c891/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
17/b6bbc6c891/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
17/b6bbc6c891/2/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
29/9e6288b78e/: metadata.json
29/9e6288b78e/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
29/9e6288b78e/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
36/bb9974faa3/: metadata.json
36/bb9974faa3/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
3b/a62d994b45/: metadata.json
3b/a62d994b45/0/: content_hash.txt  context.md  full.jsonl  metadata.json  prompt.txt
51/7364db24a1/: metadata.json
51/7364db24a1/0/: content_hash.txt  context.md  full.jsonl  metadata.json
59/b1e5b43e55/: metadata.json
59/b1e5b43e55/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5b/c192377240/: metadata.json
5b/c192377240/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5b/c192377240/1/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
5e/38b8e37675/: metadata.json
5e/38b8e37675/0/: full.jsonl  metadata.json  prompt.txt
5e/38b8e37675/1/: content_hash.txt  full.jsonl  metadata.json
73/9be5efb9a3/: metadata.json
73/9be5efb9a3/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
77/342db9d568/: metadata.json
77/342db9d568/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
9c/600a63ffc6/: metadata.json
9c/600a63ffc6/0/: content_hash.txt  full.jsonl  metadata.json  prompt.txt
ab/979280c5ed/: metadata.json
ab/979280c5ed/0/: content_hash.txt  full.jsonl  metadata.json
apps/web/: index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.app.json  vite.config.ts  vitest.config.ts
apps/web/src/: App.tsx  index.css  types.ts
apps/web/src/components/: Descent.tsx  Dropzone.tsx  Field.tsx  Masthead.tsx  ResultsView.tsx
apps/web/src/components/layout/: Breadcrumbs.test.tsx  Breadcrumbs.tsx  Header.test.tsx  Header.tsx
apps/web/src/components/ui/: Banner.tsx  Button.test.tsx  Button.tsx  Card.tsx  CopyButton.test.tsx  CopyButton.tsx  FormFields.test.tsx  FormFields.tsx  LayoutPrimitives.test.tsx  Pill.tsx  QRCode.test.tsx  QRCode.tsx  Spinner.tsx  StatBar.tsx  Table.test.tsx  Table.tsx  (+2 more)
apps/web/src/lib/: api.test.ts  api.ts  clipboard.test.ts  clipboard.ts  fs-access.test.ts  fs-access.ts  ids.test.ts  ids.ts  storage.test.ts  storage.ts  tauri.test.ts  tauri.ts  utils.ts
apps/web/src/routes/: AddressPage.tsx  ImportPage.tsx  MnemonicPage.tsx  ResultsPage.tsx  ScanPage.tsx  WalletPage.tsx
c4/e5a2a1729e/: metadata.json
c4/e5a2a1729e/0/: content_hash.txt  full.jsonl  metadata.json
c6/bcd7ad4637/: metadata.json
c6/bcd7ad4637/0/: full.jsonl  metadata.json  prompt.txt
crates/orpheus-cli/: Cargo.toml  build.rs
crates/orpheus-cli/src/: main.rs  serve.rs
crates/orpheus-core/: Cargo.toml
crates/orpheus-core/src/: balance.rs  crypto.rs  lib.rs  models.rs  scanner.rs
crates/orpheus-core/src/extractors/: bip39_mnemonic.rs  bitcoin_core.rs  blockchain_com.rs  encrypted.rs  mod.rs  multibit.rs  wallet_dump.rs
crates/orpheus-demo-fixtures/: Cargo.toml
crates/orpheus-demo-fixtures/src/: main.rs
crates/orpheus-server/: Cargo.toml  build.rs
crates/orpheus-server/src/: main.rs
crates/orpheus-tauri/: package.json
crates/orpheus-tauri/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
crates/orpheus-tauri/src-tauri/capabilities/: default.json
crates/orpheus-tauri/src-tauri/icons/: icon.icns
crates/orpheus-tauri/src-tauri/src/: lib.rs  main.rs
docs/: RELEASING.md
docs/superpowers/backlog/: desktop-app-packaging.md
docs/superpowers/plans/: 2026-04-17-orpheus-implementation.md  2026-04-17-rust-desktop-rewrite.md  2026-04-17-web-redesign.md
docs/superpowers/specs/: 2026-04-17-bitcoin-recovery-tool-design.md  2026-04-17-web-redesign-design.md
e6/c4ab7daa79/: metadata.json
e6/c4ab7daa79/0/: content_hash.txt  full.jsonl  metadata.json
ee/5b82575acd/: metadata.json
ee/5b82575acd/0/: metadata.json  prompt.txt
fixtures/: README.md  mock_balances.json
fixtures/demo-wallets/: demo_multibit.wallet  demo_multibit_protected.wallet  demo_seed.txt
packaging/gpg/: README.md  orpheus-release-pubkey.asc
packaging/homebrew/: README.md  orpheus-head-app.rb.template  orpheus-head.rb.formula.template  orpheus-head.rb.template  orpheus.rb.perarch.template  orpheus.rb.universal.template
scripts/: build-cli-for-tauri.sh  build_fixtures.py  setup-gpg-release-key.sh
src/orpheus/: __init__.py  __main__.py  balance.py  cli.py  models.py  scanner.py
src/orpheus/crypto/: addresses.py  bech32.py  bip32.py  keys.py
src/orpheus/data/: mock_balances.json
src/orpheus/data/demo-wallets/: demo_descriptor_dump.json
src/orpheus/extractors/: base.py  bip39.py  bitcoin_core.py  blockchain_com.py  encrypted.py  multibit.py  wallet_dump.py
src/orpheus/web/: app.py
src/orpheus/web/static/: orpheus.css  orpheus.js
src/orpheus/web/templates/: index.html
tests/: conftest.py  test_balance.py  test_crypto_bech32.py  test_crypto_bip32.py  test_crypto_keys.py  test_extractors_bip39.py  test_extractors_bitcoin_core.py  test_extractors_blockchain_com.py  test_extractors_encrypted.py  test_extractors_multibit.py  test_extractors_wallet_dump.py  test_models.py  test_smoke.py  test_web_app.py
