[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "orpheus"
version = "0.1.0"
description = "Recover lost cryptocurrency from forgotten wallets"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Orpheus Contributors" },
]
requires-python = ">=3.10"
keywords = ["bitcoin", "wallet", "recovery", "bip39", "bip32"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security :: Cryptography",
]
dependencies = [
    "click>=8.1",
    "flask>=3.0",
    "ecdsa>=0.19",
    "base58>=2.1",
    "requests>=2.31",
    "cryptography>=42.0",
    "mnemonic>=0.21",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "requests-mock>=1.12",
    "ruff>=0.6",
]

[project.scripts]
orpheus = "orpheus.cli:main"

[project.urls]
Homepage = "https://github.com/dougnukem/orpheus"
Issues = "https://github.com/dougnukem/orpheus/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/orpheus"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
