[package]
name = "orpheus-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Orpheus core: wallet extractors, crypto, balance lookup"
readme = "../../README.md"
documentation = "https://docs.rs/orpheus-core"
keywords = ["bitcoin", "wallet", "recovery", "bip39", "crypto"]
categories = ["cryptography::cryptocurrencies", "command-line-utilities"]
exclude = ["fixtures/*", "tests/fixtures/*"]

[lints.rust]
unsafe_code = "forbid"

# We lean on the default clippy lints (correctness + suspicious + style +
# complexity + perf). Pedantic is deliberately opt-out for v0.1 — we can
# promote it once the codebase stops churning.
[lints.clippy]
all = { level = "warn", priority = -1 }

[dependencies]
bitcoin.workspace = true
bip39.workspace = true
secp256k1.workspace = true
scrypt.workspace = true
aes.workspace = true
cbc.workspace = true
sha2.workspace = true
ripemd.workspace = true
hmac.workspace = true
pbkdf2.workspace = true
hex.workspace = true
base58.workspace = true
regex.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
walkdir.workspace = true
reqwest = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }

[features]
default = ["network"]
network = ["dep:reqwest", "dep:tokio"]

[dev-dependencies]
tokio = { workspace = true }
