[package]
name = "orpheus-server"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Orpheus axum web server that hosts the embedded React app"

[[bin]]
name = "orpheus-server"
path = "src/main.rs"

[dependencies]
orpheus-core = { path = "../orpheus-core" }
anyhow.workspace = true
axum.workspace = true
tokio.workspace = true
tower.workspace = true
tower-http.workspace = true
rust-embed.workspace = true
mime_guess.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tempfile = "3"
