[package]
name = "orpheus-tauri"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
description = "Orpheus Tauri v2 desktop application"

[lib]
name = "orpheus_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "orpheus-desktop"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
orpheus-core = { path = "../../orpheus-core" }
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
